tests/codegen-anf/pass/008-sub.hyg
assert(42 - 10 = 32);
assert(3.14f - 1.0f = 2.14f)