tests/codegen-anf/fail/010-max.hyg
assert(max(1.0f, 2.3f) = 1.0f)